classic ui: fix missing html label/text for searchbox () #John Giacalone #1114
thanks, it was removed while the font size was too big.

now it makes sense to re-add that, mostly for new users ofc.

fixes #1114

--- a/html/stylesheets/interface/menu.css
+++ b/html/stylesheets/interface/menu.css
@@ -80,3 +80,10 @@ ul {
 	border-bottom: 1px solid #fff;
 	color: #6e7475;
 }
+
+#menu ul li.menuli_style3 {
+	background-color: #e9e9e9;
+	color: #6e7475;
+	text-decoration: none;
+	padding-left: 20px;
+}
